add run mnist train script for linux